test/official_tests/inheritance/parenthesized_superclass.lox
class Foo {}

// error: {"line":4,"message":"Expect superclass name","type":"ParseError"}
class Bar < (Foo) {}
